--- a/dilithium/main/CMakeLists.txt
+++ b/dilithium/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "main.c" "randombytes.c" "sign.c" "packing.c" "polyvec.c" "poly.c" "ntt.c" "reduce.c" "rounding.c" "fips202.c" "symmetric-shake.c"
+idf_component_register(SRCS "main.c" "sign.c" "packing.c" "polyvec.c" "poly.c" "ntt.c" "reduce.c" "rounding.c" "symmetric-shake.c" "symmetric-aes.c" "fips202.c" "aes256ctr.c" "randombytes.c"
                     INCLUDE_DIRS "/home/ruben/esp/esp-idf/components/esp_hw_support/include/")
