--- a/Dilithium/CMakeLists.txt
+++ b/Dilithium/CMakeLists.txt
@@ -1,21 +1,4 @@
-# cmake_minimum_required(VERSION 3.10)
-
-# project(dilithium C ASM)
-
-# set(CMAKE_C_STANDARD 99)
-# set(CMAKE_C_STANDARD_REQUIRED ON)
-
-# enable_testing()
-
-# #find_package(OpenSSL REQUIRED)
-# #include_directories(${OPENSSL_INCLUDE_DIR})
-
-# add_subdirectory(ref)
-# #add_subdirectory(avx2)
-
 cmake_minimum_required(VERSION 3.16)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(main)
-
-# add_subdirectory(main)
+project(Dilithium)
